<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/abt_us"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="College Information"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/colorAbttext"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_width="450px"
        android:background="@drawable/splash"
        android:layout_height="400px"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:textSize="15dp"
        android:textColor="@color/colorAbttext"
        android:text="@string/about_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/abt_cnt"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAbttext"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginBottom="05dp"
        android:textColor="@color/colorAbttext"
        android:text="@string/abt_det"/>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAbttext"
        android:text="@string/abt_het"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:textColor="@color/colorAbttext"
        android:text="@string/abt_greet"/>
</LinearLayout>